# noorg

./: .gitignore  Cargo.toml  README.md  configexample.toml  install.sh
resources/default_scripts/lua/: lua_executor.lua  metadata_generator.lua
resources/default_scripts/python/: code_bookmarks.py  content_metrics_generator.py  inline_tags.py  kanban_board.py  logging_utils.py  time_tracker.py  timestamp_generator.py
src/: cli.rs  editor.rs  embedded.rs  event.rs  handlers.rs  lib.rs  logging.rs  metadata.rs  note.rs  observer_registry.rs  script_loader.rs  settings.rs  settings_dialog.rs  utils.rs  watcher.rs  window_manager.rs
src/observers/: llm_metadata.rs  mod.rs  similar_notes.rs  sqlite_store.rs  tag_index.rs  timestamp.rs  toc.rs
